--- a/src/pages/HomePage/dialog.css
+++ b/src/pages/HomePage/dialog.css
@@ -1,6 +1,7 @@
 .MuiDialog-paper {
     max-width: 55vw;
     min-width: 55vw;
+    min-height: 28vw;
     clip-path: polygon(0 0, 93% 0, 100% 15%, 100% 70%, 100% 100%, 30% 100%, 0 100%, 0% 30%);
 }
 
@@ -10,7 +11,6 @@
 }
 
 .MuiDialog-paper > .MuiDialogTitle-root > h2 {
-    color: #3E63EC;
     font-family: Gilroy-Bold;
     text-align: center;
     font-size: 2.3vw;
